--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/coordinatorLayout"
     tools:context="com.example.android.filmesfamosos.MainActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/error_message"
+        android:textAlignment="center"
         android:textSize="20sp"
         android:visibility="invisible" />
 
@@ -25,4 +27,4 @@
         android:layout_width="42dp"
         android:layout_gravity="center"
         android:visibility="invisible" />
-</merge>
+</FrameLayout>
